<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactScreen">
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:orientation="vertical"

            android:gravity="center"
            >
            <Button
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"


            android:gravity="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titlecontact"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginEnd="50dp"
                />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlename"
            android:textSize="24sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_inputtext"
            android:hint="@string/namehint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlephonenumber"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_inputtext"
            android:hint="@string/phonenumberhint"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleemail"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_inputtext"
            android:hint="@string/emailhint"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titledescription"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/custom_inputtext"
            android:hint="@string/descriptionhint"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_submitbutton"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>