<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".HobbyFragment">
    <LinearLayout
        android:id="@+id/hobbiestitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hobbiestitle"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/hobbiestitle"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/luffy"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hobbiesone"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/writing"
                    android:scaleType="center"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbieseight"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/guitar"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiestwo"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/design"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiesthree"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/camera"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiesfour"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/videography"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiesfive"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/gaming"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiessix"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_hobbies_background"


                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/Circular"
                    android:src="@drawable/traveling"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbiesseven"
                    android:textSize="23sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"


                    />


            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>